도전과제 텍스트 정렬 및 phase3/4 이미지 배치 재조정

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -290,12 +290,12 @@
                   <figure class="overview-figure-card">
                     <img loading="lazy" src="../../assets/images/research/phase2/oct_analysis.png" alt="망막 OCT 측정">
                     <figcaption class="overview-figcaption">OCT
-                      망막 곡률 실측</figcaption>
+                      각막 곡률 실측</figcaption>
                   </figure>
                   <figure class="overview-figure-card">
                     <img loading="lazy" src="../../assets/images/research/phase2/optical_simulation.png" alt="Ray-tracing 시뮬레이션">
-                    <figcaption class="overview-figcaption">6개
-                      굴절면 Ray-tracing</figcaption>
+                    <figcaption class="overview-figcaption">각막1면부터
+                      수정체2면피질까지의 총 90개 Ray-tracing</figcaption>
                   </figure>
                   <figure class="overview-figure-card">
                     <img loading="lazy" src="../../assets/images/research/phase2/curvature_graph.png" alt="곡률 변화 그래프">
