--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -112,7 +112,7 @@
                   <figure class="overview-figure-card" style="flex: 0 0 65% !important; max-width: 65% !important;">
                     <img loading="lazy" src="../assets/images/research/phase3/experiment_setup.png"
                       alt="Raspberry Pi + Arduino based Experiment Setup"
-                      style="width: 170% !important; max-width: none !important; height: auto !important; margin-top: 4.2rem !important; margin-left: -35% !important; display: block !important;">
+                      style="width: 145% !important; max-width: none !important; height: auto !important; margin-top: 4.2rem !important; margin-left: -22.5% !important; display: block !important;">
                     <figcaption class="overview-figcaption">
                       Raspberry Pi + Arduino based Real-time Auto Refractometer Prototype</figcaption>
                   </figure>
@@ -146,7 +146,7 @@
                   <figure
                     style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 90% !important; max-width: 90% !important; overflow: hidden;">
                     <img loading="lazy" src="../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI Learning Pipeline"
-                      style="width: 180% !important; max-width: none !important; margin-left: -40% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
+                      style="width: 153% !important; max-width: none !important; margin-left: -26.5% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">
                       Tuning → Learning → Testing → Output ML Pipeline</figcaption>
                   </figure>
@@ -202,7 +202,7 @@
                   <figure style="display: inline-block; width: 58% !important; max-width: 58% !important; min-width: 0 !important; background: transparent; border: none; padding: 0; overflow: visible;">
                     <img loading="lazy" src="../assets/images/research/phase3/structured_light_process.jpg"
                       alt="Structured Light Pattern Image Processing"
-                      style="width: 175% !important; max-width: none !important; margin-left: -37.5% !important; display: block !important; height: auto !important;" />
+                      style="width: 163% !important; max-width: none !important; margin-left: -31.5% !important; display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Infrared Pattern Projection & Image Processing Pipeline
                     </figcaption>
@@ -213,7 +213,7 @@
                   <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img loading="lazy" src="../assets/images/research/phase3/3d_reconstruction_method.png"
                       alt="3D Reconstruction Algorithm"
-                      style="width: 140% !important; max-width: none !important; margin-left: -20% !important; display: block !important; height: auto !important;" />
+                      style="width: 129% !important; max-width: none !important; margin-left: -14.5% !important; display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Physical vs ML-based Hybrid Reconstruction
                     </figcaption>
@@ -221,7 +221,7 @@
                   <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img loading="lazy" src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
-                      style="width: 140% !important; max-width: none !important; margin-left: -20% !important; display: block !important; height: auto !important;" />
+                      style="width: 123% !important; max-width: none !important; margin-left: -11.5% !important; display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Real-time Corneo-Scleral 3D Analysis Software
                     </figcaption>
@@ -264,36 +264,35 @@
                   </p>
 
                   <!-- Phase 4 Images -->
-                  <div class="challenge-visual-grid"
-                    style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
-                    <!-- 1. Experiment Scene -->
-                    <figure
-                      style="flex: 1 1 auto; max-width: 249px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                      <img loading="lazy" src="../assets/images/research/phase4_experiment_scene_new.jpg" alt="Experiment Scene"
-                        style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
-                      <figcaption class="overview-figcaption">
-                        Clear image acquisition even in low light with IR
-                      </figcaption>
-                    </figure>
-
-                    <!-- 2. Eye Tracking Monitor -->
-                    <figure
-                      style="flex: 1 1 auto; max-width: 247px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                      <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
-                        style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
-                      <figcaption class="overview-figcaption">
-                        Automated calculation & output of 10 pupil metrics after real-time ROI detection
-                      </figcaption>
-                    </figure>
-
-                    <!-- 3. Pupil Graph -->
-                    <figure
-                      style="flex: 1 1 auto; max-width: 1000px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                      <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph">
-                      <figcaption class="overview-figcaption">
-                        Time-series Pupil Response Analysis by Stimulus
-                      </figcaption>
-                    </figure>
+                  <div style="margin-bottom: 1.5rem;">
+                    <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
+                      <figure
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
+                          style="width: 125% !important; max-width: none !important; margin-left: -12.5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        <figcaption class="overview-figcaption">
+                          Clear image acquisition even in low light with IR
+                        </figcaption>
+                      </figure>
+                      <figure
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
+                          style="width: 125% !important; max-width: none !important; margin-left: -12.5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        <figcaption class="overview-figcaption">
+                          Automated calculation & output of 10 pupil metrics after real-time ROI detection
+                        </figcaption>
+                      </figure>
+                    </div>
+                    <div style="text-align: center;">
+                      <figure
+                        style="display: inline-block; width: 74% !important; max-width: 74% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
+                          style="width: 175% !important; max-width: none !important; margin-left: -37.5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        <figcaption class="overview-figcaption">
+                          Time-series Pupil Response Analysis by Stimulus
+                        </figcaption>
+                      </figure>
+                    </div>
                   </div>
 
                   <h4
