--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -102,7 +102,7 @@
                   <figure class="overview-figure-card" style="flex: 0 0 65% !important; max-width: 65% !important;">
                     <img loading="lazy" src="../../assets/images/research/phase3/experiment_setup.png"
                       alt="Raspberry Pi + Arduino 기반 실험 환경"
-                      style="width: 170% !important; max-width: none !important; height: auto !important; margin-top: 4.2rem !important; margin-left: -35% !important; display: block !important;">
+                      style="width: 145% !important; max-width: none !important; height: auto !important; margin-top: 4.2rem !important; margin-left: -22.5% !important; display: block !important;">
                     <figcaption class="overview-figcaption">
                       Raspberry Pi + Arduino 기반 실시간 안굴절계 시제품</figcaption>
                   </figure>
@@ -134,7 +134,7 @@
                 <div style="margin: -0.8rem 0 1.2rem; text-align: center;">
                   <figure class="overview-figure-card" style="display: inline-block; width: 90% !important; max-width: 90% !important; overflow: hidden;">
                     <img loading="lazy" src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
-                      style="width: 180% !important; max-width: none !important; margin-left: -40% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
+                      style="width: 153% !important; max-width: none !important; margin-left: -26.5% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">
                       Tuning → Learning → Testing → Output 머신러닝 파이프라인</figcaption>
                   </figure>
@@ -167,7 +167,7 @@
                 <div style="margin-bottom: 1rem; text-align: center;">
                   <figure style="display: inline-block; width: 58% !important; max-width: 58% !important; min-width: 0 !important; background: transparent; border: none; padding: 0; overflow: visible;">
                     <img loading="lazy" src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
-                      style="width: 175% !important; max-width: none !important; margin-left: -37.5% !important; display: block !important; height: auto !important;">
+                      style="width: 163% !important; max-width: none !important; margin-left: -31.5% !important; display: block !important; height: auto !important;">
                     <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
                       패턴 투사 및 이미지 처리 파이프라인</figcaption>
                   </figure>
@@ -176,13 +176,13 @@
                 <div style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: flex-start;">
                   <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img loading="lazy" src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
-                      style="width: 140% !important; max-width: none !important; margin-left: -20% !important; display: block !important; height: auto !important;">
+                      style="width: 129% !important; max-width: none !important; margin-left: -14.5% !important; display: block !important; height: auto !important;">
                     <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
                       머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
                   <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
-                      style="width: 140% !important; max-width: none !important; margin-left: -20% !important; display: block !important; height: auto !important;">
+                      style="width: 123% !important; max-width: none !important; margin-left: -11.5% !important; display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">실시간
                       각공막 3D 분석 소프트웨어</figcaption>
                   </figure>
@@ -230,36 +230,35 @@
                 </p>
 
                 <!-- Phase 4 Images -->
-                <div class="challenge-visual-grid"
-                  style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
-                  <!-- 1. Experiment Scene -->
-                  <figure
-                    style="flex: 1 1 auto; max-width: 249px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                    <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene_new.jpg" alt="실제 실험 진행 장면"
-                      style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
-                    <figcaption class="overview-figcaption">
-                      적외선으로 낮은 조도에서도 선명한 이미지 획득
-                    </figcaption>
-                  </figure>
-
-                  <!-- 2. Eye Tracking Monitor -->
-                  <figure
-                    style="flex: 1 1 auto; max-width: 247px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                    <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
-                      style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
-                    <figcaption class="overview-figcaption">
-                      실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
-                    </figcaption>
-                  </figure>
-
-                  <!-- 3. Pupil Graph -->
-                  <figure
-                    style="flex: 1 1 auto; max-width: 1000px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                    <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프">
-                    <figcaption class="overview-figcaption">
-                      자극별 시계열 동공 반응 분석 (Pupil Response by Stimulus)
-                    </figcaption>
-                  </figure>
+                <div style="margin-bottom: 1.5rem;">
+                  <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
+                    <figure
+                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
+                        style="width: 125% !important; max-width: none !important; margin-left: -12.5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                      <figcaption class="overview-figcaption">
+                        적외선으로 낮은 조도에서도 선명한 이미지 획득
+                      </figcaption>
+                    </figure>
+                    <figure
+                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
+                        style="width: 125% !important; max-width: none !important; margin-left: -12.5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                      <figcaption class="overview-figcaption">
+                        실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
+                      </figcaption>
+                    </figure>
+                  </div>
+                  <div style="text-align: center;">
+                    <figure
+                      style="display: inline-block; width: 74% !important; max-width: 74% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
+                        style="width: 175% !important; max-width: none !important; margin-left: -37.5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                      <figcaption class="overview-figcaption">
+                        자극별 시계열 동공 반응 분석 (Pupil Response by Stimulus)
+                      </figcaption>
+                    </figure>
+                  </div>
                 </div>
 
                 <h4 style="font-size: 1rem; margin-bottom: 1rem; color: #334155; font-weight: 600; margin-top: 1.5rem;">
