phase1 캡션 및 phase3/4 이미지 정렬/프레임 비율 조정

--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -109,10 +109,10 @@
                 <!-- Row 1: Experiment (Left) + Optical/IR Views (Right) -->
                 <div style="display: flex; gap: 1rem; margin-bottom: 2rem; flex-wrap: wrap;">
                   <!-- Left: Experiment Setup (approx 0.7 scale relative to container or layout balance) -->
-                  <figure class="overview-figure-card" style="flex: 0 0 65% !important; max-width: 65% !important;">
+                  <figure class="overview-figure-card" style="flex: 0 0 65% !important; max-width: 65% !important; display: flex; flex-direction: column; justify-content: center;">
                     <img loading="lazy" src="../assets/images/research/phase3/experiment_setup.png"
                       alt="Raspberry Pi + Arduino based Experiment Setup"
-                      style="width: 130.5% !important; max-width: none !important; height: auto !important; margin-top: 4.2rem !important; margin-left: -15.25% !important; display: block !important;">
+                      style="width: 130.5% !important; max-width: none !important; height: auto !important; margin: 0 0 0 -15.25% !important; display: block !important;">
                     <figcaption class="overview-figcaption">
                       Raspberry Pi + Arduino based Real-time Auto Refractometer Prototype</figcaption>
                   </figure>
@@ -221,7 +221,7 @@
                   <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img loading="lazy" src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
-                      style="width: 108.24% !important; max-width: none !important; margin-left: -4.12% !important; display: block !important; height: auto !important;" />
+                      style="width: 110.7% !important; max-width: none !important; margin-left: -5.35% !important; display: block !important; height: auto !important;" />
                     <figcaption class="overview-figcaption">
                       Real-time Corneo-Scleral 3D Analysis Software
                     </figcaption>
@@ -267,27 +267,27 @@
                   <div style="margin-bottom: 1.5rem;">
                     <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
                           style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
-                        <figcaption class="overview-figcaption">
+                        <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                           Clear image acquisition even in low light with IR
                         </figcaption>
                       </figure>
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
                           style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
-                        <figcaption class="overview-figcaption">
+                        <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                           Automated calculation & output of 10 pupil metrics after real-time ROI detection
                         </figcaption>
                       </figure>
                     </div>
                     <div style="text-align: center;">
                       <figure
-                        style="display: inline-block; width: 74% !important; max-width: 74% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        style="display: inline-block; width: 85.1% !important; max-width: 85.1% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                         <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
-                          style="width: 140% !important; max-width: none !important; margin-left: -20% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          style="width: 126% !important; max-width: none !important; margin-left: -13% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption">
                           Time-series Pupil Response Analysis by Stimulus
                         </figcaption>
