--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -99,10 +99,10 @@
                 <!-- Row 1: Experiment (Left) + Optical/IR Views (Right) -->
                 <div class="overview-figure-row" style="gap: 0.8rem; flex-wrap: wrap; align-items: flex-start;">
                   <!-- Left: Experiment Setup -->
-                  <figure class="overview-figure-card" style="flex: 0 0 65% !important; max-width: 65% !important;">
+                  <figure class="overview-figure-card" style="flex: 0 0 65% !important; max-width: 65% !important; display: flex; flex-direction: column; justify-content: center;">
                     <img loading="lazy" src="../../assets/images/research/phase3/experiment_setup.png"
                       alt="Raspberry Pi + Arduino 기반 실험 환경"
-                      style="width: 130.5% !important; max-width: none !important; height: auto !important; margin-top: 4.2rem !important; margin-left: -15.25% !important; display: block !important;">
+                      style="width: 130.5% !important; max-width: none !important; height: auto !important; margin: 0 0 0 -15.25% !important; display: block !important;">
                     <figcaption class="overview-figcaption">
                       Raspberry Pi + Arduino 기반 실시간 안굴절계 시제품</figcaption>
                   </figure>
@@ -182,7 +182,7 @@
                   </figure>
                   <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
-                      style="width: 108.24% !important; max-width: none !important; margin-left: -4.12% !important; display: block !important; height: auto !important;">
+                      style="width: 110.7% !important; max-width: none !important; margin-left: -5.35% !important; display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">실시간
                       각공막 3D 분석 소프트웨어</figcaption>
                   </figure>
@@ -233,27 +233,27 @@
                 <div style="margin-bottom: 1.5rem;">
                   <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
                     <figure
-                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                       <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
                         style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption">
+                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         적외선으로 낮은 조도에서도 선명한 이미지 획득
                       </figcaption>
                     </figure>
                     <figure
-                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
                         style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
-                      <figcaption class="overview-figcaption">
+                      <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
                       </figcaption>
                     </figure>
                   </div>
                   <div style="text-align: center;">
                     <figure
-                      style="display: inline-block; width: 74% !important; max-width: 74% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      style="display: inline-block; width: 85.1% !important; max-width: 85.1% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                       <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
-                        style="width: 140% !important; max-width: none !important; margin-left: -20% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        style="width: 126% !important; max-width: none !important; margin-left: -13% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption">
                         자극별 시계열 동공 반응 분석 (Pupil Response by Stimulus)
                       </figcaption>
