--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -238,7 +238,7 @@
                         color: #94a3b8;
                         text-align: center;
                       ">
-                    인구 집단 분석 (Population Analytics)
+                    좌우 시각경로에서의 모션 대비감도
                   </figcaption>
                 </figure>
               </div>
