phase3/4 카드 고정 후 내부 이미지 배율 재조정

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -134,7 +134,7 @@
                 <div style="margin: -0.8rem 0 1.2rem; text-align: center;">
                   <figure class="overview-figure-card" style="display: inline-block; width: 90% !important; max-width: 90% !important; overflow: hidden;">
                     <img loading="lazy" src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
-                      style="width: 122.4% !important; max-width: none !important; margin-left: -11.2% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
+                      style="width: 97.92% !important; max-width: none !important; margin-left: 1.04% !important; margin-top: 0.2rem !important; display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">
                       Tuning → Learning → Testing → Output 머신러닝 파이프라인</figcaption>
                   </figure>
@@ -173,16 +173,16 @@
                   </figure>
                 </div>
                 <!-- 아랫줄: 좌-물리적/우-실시간 (동일 y, 각 1.4배) -->
-                <div style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: flex-start;">
-                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                <div style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: stretch;">
+                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                     <img loading="lazy" src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
-                      style="width: 116.1% !important; max-width: none !important; margin-left: -8.05% !important; display: block !important; height: auto !important;">
+                      style="width: 104.49% !important; max-width: none !important; margin-left: -2.245% !important; display: block !important; height: auto !important;">
                     <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
                       머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
-                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                     <img loading="lazy" src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
-                      style="width: 110.7% !important; max-width: none !important; margin-left: -5.35% !important; display: block !important; height: auto !important;">
+                      style="width: 94.095% !important; max-width: none !important; margin-left: 2.9525% !important; display: block !important; height: auto !important;">
                     <figcaption class="overview-figcaption">실시간
                       각공막 3D 분석 소프트웨어</figcaption>
                   </figure>
@@ -243,7 +243,7 @@
                     <figure
                       style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
-                        style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        style="width: 90% !important; max-width: none !important; margin-left: 5% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
                       </figcaption>
@@ -253,7 +253,7 @@
                     <figure
                       style="display: inline-block; width: 85.1% !important; max-width: 85.1% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                       <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
-                        style="width: 126% !important; max-width: none !important; margin-left: -13% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        style="width: 107.1% !important; max-width: none !important; margin-left: -3.55% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption">
                         자극별 시계열 동공 반응 분석 (Pupil Response by Stimulus)
                       </figcaption>
