--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -210,7 +210,7 @@
                 </div>
                 <!-- Bottom Row: left-Physical / right-Real-time (same y, each 1.4x) -->
                 <div style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: stretch;">
-                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
+                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/3d_reconstruction_method.png"
                       alt="3D Reconstruction Algorithm"
                       style="width: 104.49% !important; max-width: none !important; margin-left: -2.245% !important; display: block !important; height: auto !important;" />
@@ -218,7 +218,7 @@
                       Physical vs ML-based Hybrid Reconstruction
                     </figcaption>
                   </figure>
-                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
+                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
                       style="width: 94.095% !important; max-width: none !important; margin-left: 2.9525% !important; display: block !important; height: auto !important;" />
@@ -267,7 +267,7 @@
                   <div style="margin-bottom: 1.5rem;">
                     <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
                           style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
@@ -275,9 +275,9 @@
                         </figcaption>
                       </figure>
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column;">
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
-                          style="width: 90% !important; max-width: none !important; margin-left: 5% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          style="width: 103.5% !important; max-width: none !important; margin-left: -1.75% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                           Automated calculation & output of 10 pupil metrics after real-time ROI detection
                         </figcaption>
@@ -287,7 +287,7 @@
                       <figure
                         style="display: inline-block; width: 85.1% !important; max-width: 85.1% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                         <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
-                          style="width: 107.1% !important; max-width: none !important; margin-left: -3.55% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          style="width: 115.92% !important; max-width: none !important; margin-left: -7.96% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption">
                           Time-series Pupil Response Analysis by Stimulus
                         </figcaption>
