--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -231,9 +231,9 @@
 
                 <!-- Phase 4 Images -->
                 <div style="margin-bottom: 1.5rem;">
-                  <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
+                  <div style="display: flex; gap: 1rem; justify-content: center; align-items: stretch; flex-wrap: nowrap; margin-bottom: 1rem;">
                     <figure
-                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 360px;">
+                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_experiment_scene.jpg" alt="실제 실험 진행 장면"
                         style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
@@ -241,9 +241,9 @@
                       </figcaption>
                     </figure>
                     <figure
-                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 360px;">
+                      style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
-                        style="width: 103.5% !important; max-width: none !important; margin-left: -1.75% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        style="width: 82.8% !important; max-width: none !important; margin-left: 8.6% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
                       </figcaption>
@@ -251,7 +251,7 @@
                   </div>
                   <div style="text-align: center;">
                     <figure
-                      style="display: inline-block; width: 85.1% !important; max-width: 85.1% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                      style="display: inline-block; width: 97.865% !important; max-width: 97.865% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                       <img loading="lazy" src="../../assets/images/research/phase4_pupil_graph.jpg" alt="동공 반응 결과 그래프"
                         style="width: 115.92% !important; max-width: none !important; margin-left: -7.96% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption">
