--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -265,9 +265,9 @@
 
                   <!-- Phase 4 Images -->
                   <div style="margin-bottom: 1.5rem;">
-                    <div style="display: flex; gap: 1rem; justify-content: center; align-items: flex-start; flex-wrap: nowrap; margin-bottom: 1rem;">
+                    <div style="display: flex; gap: 1rem; justify-content: center; align-items: stretch; flex-wrap: nowrap; margin-bottom: 1rem;">
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 360px;">
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
                           style="width: 112.5% !important; max-width: none !important; margin-left: -6.25% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
@@ -275,9 +275,9 @@
                         </figcaption>
                       </figure>
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 360px;">
+                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
-                          style="width: 103.5% !important; max-width: none !important; margin-left: -1.75% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                          style="width: 82.8% !important; max-width: none !important; margin-left: 8.6% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                           Automated calculation & output of 10 pupil metrics after real-time ROI detection
                         </figcaption>
@@ -285,7 +285,7 @@
                     </div>
                     <div style="text-align: center;">
                       <figure
-                        style="display: inline-block; width: 85.1% !important; max-width: 85.1% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+                        style="display: inline-block; width: 97.865% !important; max-width: 97.865% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                         <img loading="lazy" src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
                           style="width: 115.92% !important; max-width: none !important; margin-left: -7.96% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption">
