phase4 연구개요 문구 및 ROI 이미지 가로폭 보정

--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -225,7 +225,7 @@
               <div class="overview-research-box">
                 <h4>연구 개요</h4>
                 <p class="overview-text-sm">
-                  본 연구는 동공 반응을 통해 인간의 무의식적 성적 선호도를 객관적으로 평가하는 방법론을 제시했습니다. Basler 고속 산업용 카메라와 고정초점 렌즈 기반의 적외선 동공 추적 시스템을
+                  본 연구는 동공 반응을 통해 인간의 무의식적 성적 선호도를 객관적으로 평가하는 방법론을 제시했습니다. 66fps이상 촬영이 가능한 고속카메라와 고정초점 렌즈 기반의 적외선 동공 추적 시스템을
                   구축하여, OpenCV 기반 자체 알고리즘을 통해 영상 데이터에서 동공의 미세 번화와 반응 속도를 정밀하게 추출 및 분석하는 파이프라인을 확립했습니다.
                 </p>
 
@@ -243,7 +243,7 @@
                     <figure
                       style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                       <img loading="lazy" src="../../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="동공 추적 모니터링 화면"
-                        style="width: 74.52% !important; max-width: none !important; margin-left: 12.74% !important; display: block !important; height: auto !important; border-radius: 4px;">
+                        style="width: 96% !important; max-width: none !important; margin-left: 2% !important; display: block !important; height: auto !important; border-radius: 4px;">
                       <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
                         실시간 ROI 검출 후 10가지 동공정보 계산 및 출력 자동화
                       </figcaption>
