로고 스타일 통일 및 연구성과 메뉴 하위토글 동작 개선

--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -51,16 +51,7 @@
         <a href="../team/index.html" class="nav-item">구성원</a>
         <a href="../research/overview.html" class="nav-item">도전과제</a>
         <a href="index.html" class="nav-item active">연구성과</a>
-        <div
-          class="sidebar-submenu"
-          style="
-            padding-left: 1.5rem;
-            display: flex;
-            flex-direction: column;
-            gap: 0.2rem;
-            margin-bottom: 0.5rem;
-          "
-        >
+        <div class="sidebar-submenu">
           <a href="#reviewed-papers" class="nav-item">연구논문</a>
           <a href="#conference" class="nav-item">학술발표</a>
           <a href="#patent" class="nav-item">특허</a>
