--- a/publications/index.html
+++ b/publications/index.html
@@ -51,16 +51,7 @@
         <a href="../team/index.html" class="nav-item">Team</a>
         <a href="../research/overview.html" class="nav-item">Challenges</a>
         <a href="index.html" class="nav-item active">Publications</a>
-        <div
-          class="sidebar-submenu"
-          style="
-            padding-left: 1.5rem;
-            display: flex;
-            flex-direction: column;
-            gap: 0.2rem;
-            margin-bottom: 0.5rem;
-          "
-        >
+        <div class="sidebar-submenu">
           <a href="#reviewed-papers" class="nav-item">Reviewed Papers</a>
           <a href="#conference" class="nav-item">Conference</a>
           <a href="#patent" class="nav-item">Patent</a>
