--- a/research/project.html
+++ b/research/project.html
@@ -34,7 +34,7 @@
     <header>
       <div class="container">
         <div class="logo-container">
-          <h1>MasVisio Research</h1>
+          <h1>MasVisio<br />Research</h1>
           <div class="logo-subtitle">
             Vision Intelligence & Biomedical Engineering
           </div>
