--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -33,7 +33,7 @@
   <aside class="sidebar">
     <div class="sidebar-header">
       <a href="../index.html" class="sidebar-logo">
-        <h1>MasVisio Research</h1>
+        <h1>MasVisio<br />Research</h1>
         <span class="sidebar-subtitle">Vision Intelligence &<br />Biomedical Engineering</span>
       </a>
     </div>
