도전과제 모바일 카드 여백 및 phase3 캡션/정렬 보정

--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -19,9 +19,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/main.css?v=2.3" />
-  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.3" />
-  <link rel="stylesheet" href="../assets/css/components.css?v=2.3" />
+  <link rel="stylesheet" href="../assets/css/main.css?v=2.4" />
+  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.4" />
+  <link rel="stylesheet" href="../assets/css/components.css?v=2.4" />
 </head>
 
 <body class="sidebar-layout">
@@ -123,7 +123,7 @@
                     <!-- Top Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../assets/images/research/phase3/retinoscope_view.png" alt="Retinoscope View"
-                        style="width: 64% !important; max-width: 64% !important; margin: 0 0 0 28% !important; display: block !important; height: auto !important;">
+                        style="width: 64% !important; max-width: 64% !important; margin: 0 auto !important; display: block !important; height: auto !important;">
                       <figcaption class="overview-figcaption">
                         Retinoscopy Optical System View</figcaption>
                     </figure>
@@ -134,7 +134,7 @@
                     <!-- Bottom Right -->
                     <figure class="overview-figure-card" style="width: 100% !important; max-width: 100% !important; flex: none !important;">
                       <img loading="lazy" src="../assets/images/research/phase3/ir_pupil_image.png" alt="IR Pupil Image"
-                        style="width: 64% !important; max-width: 64% !important; margin: 0 0 0 28% !important; display: block !important; height: auto !important;">
+                        style="width: 64% !important; max-width: 64% !important; margin: 0 auto !important; display: block !important; height: auto !important;">
                       <figcaption class="overview-figcaption">IR
                         Camera Retinal Shadow Pattern</figcaption>
                     </figure>
@@ -210,7 +210,7 @@
                 </div>
                 <!-- Bottom Row: left-Physical / right-Real-time (same y, each 1.4x) -->
                 <div style="display: flex; gap: 1.2rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem; align-items: stretch;">
-                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/3d_reconstruction_method.png"
                       alt="3D Reconstruction Algorithm"
                       style="width: 104.49% !important; max-width: none !important; margin-left: -2.245% !important; display: block !important; height: auto !important;" />
@@ -218,7 +218,7 @@
                       Physical vs ML-based Hybrid Reconstruction
                     </figcaption>
                   </figure>
-                  <figure style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
+                  <figure class="mobile-tight-card" style="flex: 0 1 48% !important; max-width: 48% !important; min-width: 0 !important; background: #fff; padding: 0.5rem 0.5rem 1.1rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; justify-content: center; min-height: 320px;">
                     <img loading="lazy" src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
                       style="width: 94.095% !important; max-width: none !important; margin-left: 2.9525% !important; display: block !important; height: auto !important;" />
@@ -267,7 +267,7 @@
                   <div style="margin-bottom: 1.5rem;">
                     <div style="display: flex; gap: 1rem; justify-content: center; align-items: stretch; flex-wrap: nowrap; margin-bottom: 1rem;">
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                        class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_experiment_scene.jpg" alt="Experiment Scene"
                           style="width: 101.25% !important; max-width: none !important; margin-left: -0.625% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
@@ -275,7 +275,7 @@
                         </figcaption>
                       </figure>
                       <figure
-                        style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
+                        class="mobile-tight-card" style="flex: 0 1 45% !important; max-width: 45% !important; min-width: 0 !important; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; height: 360px;">
                         <img loading="lazy" src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
                           style="width: 74.52% !important; max-width: none !important; margin-left: 12.74% !important; display: block !important; height: auto !important; border-radius: 4px;">
                         <figcaption class="overview-figcaption" style="min-height: 2.8em; display: flex; align-items: center; justify-content: center;">
@@ -391,7 +391,7 @@
       window.location.replace("overview.html#phase-3");
     }
   </script>
-  <script src="../assets/js/main.js?v=2.3" defer></script>
+  <script src="../assets/js/main.js?v=2.4" defer></script>
 </body>
 
 </html>
