phase2 이미지 카드 프레임 제거 및 캐시 버전 갱신

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -17,9 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../../assets/css/main.css?v=2.4" />
-  <link rel="stylesheet" href="../../assets/css/responsive.css?v=2.4" />
-  <link rel="stylesheet" href="../../assets/css/components.css?v=2.4" />
+  <link rel="stylesheet" href="../../assets/css/main.css?v=2.5" />
+  <link rel="stylesheet" href="../../assets/css/responsive.css?v=2.5" />
+  <link rel="stylesheet" href="../../assets/css/components.css?v=2.5" />
 </head>
 
 <body class="sidebar-layout">
@@ -286,7 +286,7 @@
                   2014년부터 지속적으로 고도화해 온 독자적인 계산 알고리즘을 통해, <strong>각막 전면과 후면, 수정체 피질의 전면과 후면, 그리고 수정체 핵의 전면과 후면 등 총 6개의
                     굴절면</strong>에서 발생하는 모든 입사각과 굴절각을 기하광학적 관점에서 계산합니다.
                 </p>
-                <div class="challenge-visual-grid" class="overview-figure-row">
+                <div class="challenge-visual-grid phase2-no-frame overview-figure-row">
                   <figure class="overview-figure-card">
                     <img loading="lazy" src="../../assets/images/research/phase2/oct_analysis.png" alt="망막 OCT 측정">
                     <figcaption class="overview-figcaption">OCT
@@ -339,7 +339,7 @@
                   <li><strong>Step 3. 굴절 산출:</strong> 피험자의 색상별 시인성 응답 패턴을 분석하여 망막상 초점 위치
                     역산</li>
                 </ul>
-                <div class="challenge-visual-grid" class="overview-figure-row">
+                <div class="challenge-visual-grid phase2-no-frame overview-figure-row">
                   <figure class="overview-figure-card">
                     <img loading="lazy" src="../../assets/images/research/phase2/peripheral_setup_schematic.png" alt="측정 시스템 모식도">
                     <figcaption class="overview-figcaption">주변부
@@ -367,7 +367,7 @@
     </section>
   </main>
 
-  <script src="../../assets/js/main.js?v=2.4" defer></script>
+  <script src="../../assets/js/main.js?v=2.5" defer></script>
 </body>
 
 </html>
