--- a/research/overview.html
+++ b/research/overview.html
@@ -19,9 +19,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/main.css?v=2.4" />
-  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.4" />
-  <link rel="stylesheet" href="../assets/css/components.css?v=2.4" />
+  <link rel="stylesheet" href="../assets/css/main.css?v=2.5" />
+  <link rel="stylesheet" href="../assets/css/responsive.css?v=2.5" />
+  <link rel="stylesheet" href="../assets/css/components.css?v=2.5" />
 </head>
 
 <body class="sidebar-layout">
@@ -270,7 +270,7 @@
                   incidence and refraction at <strong>6 refractive surfaces: anterior/posterior cornea,
                     anterior/posterior lens cortex, and anterior/posterior lens nucleus</strong>.
                 </p>
-                <div class="challenge-visual-grid"
+                <div class="challenge-visual-grid phase2-no-frame"
                   style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
                   <figure
                     style="flex: 1 1 auto; max-width: 300px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
@@ -330,7 +330,7 @@
                   <li><strong>Step 3. Refraction Calculation:</strong> Inverse calculate
                     the focal position on the retina by analyzing clarity response patterns.</li>
                 </ul>
-                <div class="challenge-visual-grid" class="overview-figure-row">
+                <div class="challenge-visual-grid phase2-no-frame overview-figure-row">
                   <figure
                     style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img loading="lazy" src="../assets/images/research/phase2/peripheral_setup_schematic.png" alt="Setup Schematic">
@@ -361,7 +361,7 @@
     </section>
   </main>
 
-  <script src="../assets/js/main.js?v=2.4" defer></script>
+  <script src="../assets/js/main.js?v=2.5" defer></script>
 </body>
 
 </html>
